# ECS

./: .gitignore  ECS.sln  LICENSE.md  README.md
ECS/: .gitignore  BaseComponent.cpp  BaseComponent.h  BaseEntity.cpp  BaseEntity.h  BaseSystem.cpp  BaseSystem.h  CMakeLists.txt  ECS.cpp  ECS.h  ECS.vcxproj  ECS.vcxproj.filters  PoolManager.h  ReadMe.txt  TPool.h  Tools.h  stdafx.cpp
ECS/include/: BaseComponent.h  BaseEntity.h  BaseSystem.h  Pool.h  PoolManager.h  TPool.h  Tools.h  stdafx.h
ECS/include/ECS/: BaseComponent.h  BaseEntity.h  BaseSystem.h  Collector.h  ECS.h  Entity.h  Event.h  EventBus.h  Group.h  Matcher.h  PoolManager.h  ReactiveVariable.h  TPool.h  Tools.h  conststr.h
ECS/src/: BaseComponent.cpp  Collector.cpp  ECS.cpp  Event.cpp  Pool.cpp  PoolManager.cpp  Tools.cpp  stdafx.cpp
